--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
         <title>My awesome web page</title>
         <h1>Continuation </h1>
-    </head>
+<img src="https://avatars1.githubusercontent.com/u/59586903?v=4">
+
 
   <body>
     Hello there, awesome person! 
