--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 
   <body>
     Hello there, awesome person! 
+      
+ <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+     <li>www.facebook.com</li>
+</ol>
+  <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+      <li>www.google.com.mx</li>
+</ul>
   </body>
 
 </html>
