--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>My awesome web page</title>
         <h1>Continuation </h1>
 <img src="https://avatars1.githubusercontent.com/u/59586903?v=4">
+        <link rel="stylesheet" href="style.css">
 
 
   <body>
